# vibe-video-gemini-omni

./: .dockerignore  .env.example  .firebaserc  .gcloudignore  .gitignore  Dockerfile  README.md  agents-cli-manifest.yaml  cloudbuild-firebase.yaml  cloudbuild.yaml  deploy.sh  firebase.json  main.py  pyproject.toml  test_pipeline_ws.py
.agents/skills/gemini-omni-flash/: SKILL.md
.agents/skills/gemini-omni-flash/references/: aspect_ratio_control.md  image_to_video.md  stateful_editing.md  text_to_video.md
.agents/skills/gemini-omni-prompt-architect/: SKILL.md
.agents/skills/vibe-video-prompt-engineering/: SKILL.md
app/: __init__.py  agent.py  constants.py  fast_api_app.py  prompts.py  schemas.py  state_helper.py  tools.py
app/app_utils/: __init__.py  services.py
app/instructions/: creative_director.md  critic.md  prompt_architect.md  video_producer.md
backend/: event_dispatcher.py
frontend/: app.js  index.html  styles.css
tests/eval/datasets/: video_pipeline.json  video_pipeline_extended.json
tests/integration/: test_api.py  test_pipeline_local.py  test_pipeline_verification.py  test_websocket_safety.py
tests/unit/: test_agent_structure.py  test_caching_lifecycle.py  test_creative_director.py  test_critic_safety.py  test_schemas.py  test_streaming_protocol.py  test_tools_contract.py  test_turn_management.py
