[project]
name = "vibe-video-gemini"
version = "0.1.0"
description = "Gemini Omni Vibe Video Studio — ADK Multi-Agent generative video pipeline"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-genai>=2.10.0",
    "fastapi>=0.138.1",
    "uvicorn>=0.49.0",
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "aiosqlite>=0.22.1",
]

[dependency-groups]
dev = [
    "ruff>=0.4.6,<1.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "black>=26.5.1",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["app", "frontend"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "frontend"]
